# napari-simpleannotate

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  change_yolo_class.py  crop_existing_annotations.py  draw_annotated_frames.py  find_empty_annotations.py  organize_dataset.py  pyproject.toml  rename_crop_files.py  setup.cfg  test_zarr_video.py  tox.ini
.github/workflows/: ci.yml  release.yml
docs/: draw_annotated_frames.md
sample/: check_video.py
src/napari_simpleannotate/: __init__.py  _bbox_video_widget.py  _bbox_widget.py  _labelimg_widget.py  _utils.py  _widget.py  napari.yaml  text.py
src/napari_simpleannotate/_tests/: test_bbox_video_widget.py  test_bbox_widget.py  test_labelimg_widget.py  test_utils.py  test_widget.py
