[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-simpleannotate"
description = "A napari plugin for simple image and video annotation"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Hiroki Kawai", email = "h.kawai888@gmail.com"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "magicgui",
    "pyyaml",
    "qtpy",
    "scikit-image",
    "pandas",
    "napari_video",
    "zarr",
    "numcodecs",
]
version = "0.1.3"

[project.optional-dependencies]
testing = [
    "tox",
    "pytest",
    "pytest-cov",
    "pytest-qt",
    "napari",
    "pyqt5",
]

[project.urls]
homepage = "https://github.com/hiroalchem/napari-simpleannotate"
repository = "https://github.com/hiroalchem/napari-simpleannotate"
documentation = "https://github.com/hiroalchem/napari-simpleannotate#README.md"
"Bug Tracker" = "https://github.com/hiroalchem/napari-simpleannotate/issues"
"User Support" = "https://github.com/hiroalchem/napari-simpleannotate/issues"

[project.entry-points."napari.manifest"]
napari-simpleannotate = "napari_simpleannotate:napari.yaml"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]




[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310']


[tool.ruff.lint]
select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long. let black handle this
    "UP006", "UP007", # type annotation. As using magicgui require runtime type annotation then we disable this.
    "SIM117", # flake8-simplify - some of merged with statements are not looking great with black, reanble after drop python 3.9
    "BLE001", # temporarily ignore blind exception handling for now
    "E722", # temporarily ignore bare except for now
    "F841", # temporarily ignore unused variables for now
    "SIM102", "SIM105", "SIM108", # temporarily ignore simplify rules for now
]

[tool.ruff]
line-length = 79

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*vendored*",
    "*_vendor*",
]

target-version = "py38"
fix = true
